# ansys-mechanical-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: thermal-stage.yml
.github/workflows/: ci.yml  thermal-issue-triage.yml
docs/: api-research.md  architecture.md  development-chat-prompt.md  github-development-workflow.md  live-validation-workflow.md  next-chat-prompt.md  roadmap.md  selection-context-architecture.md  steady-state-thermal-workflow.md  v0.1-implementation-plan.md
examples/cantilever/: README.md
src/ansys_mechanical_mcp/: __init__.py  server.py
src/ansys_mechanical_mcp/core/: __init__.py  environment.py  errors.py  selection.py  tool_result.py
src/ansys_mechanical_mcp/products/: __init__.py
src/ansys_mechanical_mcp/products/dpf/: __init__.py  results.py  tools.py
src/ansys_mechanical_mcp/products/mechanical/: __init__.py  context.py  selection.py  session.py  tools.py  transport.py
src/ansys_mechanical_mcp/workflows/: __init__.py  static_structural.py
tests/: test_dpf_results.py  test_environment.py  test_mechanical_selection.py  test_mechanical_session.py  test_mechanical_tools.py  test_mechanical_transport.py  test_server.py  test_static_structural.py  test_tool_result.py
tests/integration/: test_mechanical_mcp_integration.py
